# libspirit

./: .gitignore  CMakeLists.txt  README  libspiritconfig.h.in
curl/: CMakeLists.txt
curl/lib/: CMakeLists.txt
src/: libspirit.c  libspirit.h  libspirit_data.h  libspirit_error.c  libspirit_news.c  libspirit_option.c  libspirit_option.h  libspirit_schedule.c  spirit_data.h  utility.c  utility.h
src/api/: libspirit.h  libspirit_common.h  libspirit_error.h  spirit.h  spirit_common.h  spirit_error.h  spirit_news.h  spirit_schedule.h
testapp/: CMakeLists.txt
testapp/src/: testapp.c
yajl/: CMakeLists.txt
yajl/src/: CMakeLists.txt
